--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
       <version>4.7.1</version>
     </dependency>
     <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.17.0</version>
+    </dependency>
+    <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
       <version>5.13.1</version>
@@ -57,7 +62,9 @@
                 <filter>
                   <artifact>*:*</artifact>
                   <excludes>
-                    <exclude>META-INF/MANIFEST.MF</exclude>
+                    <exclude>META-INF/*</exclude>
+                    <exclude>*META-INF.*</exclude>
+                    <exclude>module-info.class</exclude>
                   </excludes>
                 </filter>
               </filters>
